@@ -1,7 +1,10 @@
 package ru.kata.spring.boot_security.demo.controller;
 
+import org.springframework.http.MediaType;
+import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.ModelAttribute;
 import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 import ru.kata.spring.boot_security.demo.model.Role;
@@ -12,7 +15,7 @@ import java.util.Collections;
 import java.util.Set;
 
 @RestController
-@RequestMapping("api")
+@RequestMapping("registration/api")
 public class SecurityRestController {
     private final UserService userService;
 
@@ -20,13 +23,11 @@ public class SecurityRestController {
         this.userService = userService;
     }
 
-    @PostMapping("registration")
-    public void postRegistration(@ModelAttribute User user) {
-        if (user.getUsername().equals("admin")) {
-            user.setAuthorities(Set.of(Role.USER, Role.ADMIN));
-        } else {
-            user.setAuthorities(Collections.singleton(Role.USER));
-        }
+    @PostMapping
+    public void postRegistration(@RequestBody User user) {
+        System.out.println(user.getUsername() + user.getPassword() + user.getEmail());
+
+        user.setAuthorities(Collections.singleton(Role.USER));
 
         userService.add(user);
     }
